fixed dropdown to not resize annoyingly and also clicking whitespace of li is enough to apply filter

--- a/app/assets/stylesheets/styles/widgets/nav/_fixed.scss
+++ b/app/assets/stylesheets/styles/widgets/nav/_fixed.scss
@@ -37,6 +37,14 @@ nav {
   display: block;
   ul {
 
+    li#first-li-containing-selected-team-and-teams-ul {
+      width: 120px;
+      white-space: nowrap;
+
+      ul {
+        white-space: normal;
+      }
+    }
 
     //max-width: 1200px
     list-style-type: none;
@@ -69,26 +77,30 @@ nav {
         padding: 0;
         margin: 0;
 
-        li {
-          width: 160%;
-          text-align: left;
-          background-color: $nav-bg-color;
-          padding-left: 2em;
+        a {
+          line-height: $nav-height / 1.5;
+          height: $nav-height / 1.5;
+          width: 100%;
+          font-size: 1.5em;
+          background-color: transparent;
 
-          a {
-            line-height: $nav-height / 1.5;
-            height: $nav-height / 1.5;
-            width: 100%;
-            font-size: 1.5em;
+          li {
+            background-color: $nav-bg-color;
+            padding-left: 2em;
+            width: 160%;
+            height: 100%;
+            text-align: left;
+            margin-bottom: -4px;
 
-          }
-
-          &:hover {
-            background-color: rgba(240,240,240,0.95);
+            &:hover {
+              background-color: rgba(240,240,240,0.95);
+            }
           }
 
 
         }
+
+
      }
 
 
@@ -97,6 +109,7 @@ nav {
 
   }
 
+  // This is the dropdown ul for team select
   ul ul {
     position: absolute;
     left: -2em;
@@ -135,6 +148,7 @@ nav {
     }
     text-align: center;
     li {
+      margin-top: -3px;
       box-sizing: border-box;
       vertical-align: middle;
       display: none;
@@ -170,16 +184,15 @@ nav {
       //   }
       // }
       &:nth-of-type(1)  { // donate red
-
         display: inline-block;
-        
+
       }
     }
   }
   ul:nth-of-type(2) {
     @include span(2);
     text-align: right;
-    li:first-of-type { // hamburger 
+    li:first-of-type { // hamburger
       position: relative;
       padding-right: 0.4em;
       line-height: $nav-height;
